// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral"
>
  <span
    class="tag__body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21.0004L10.55 19.7004C7.93333 17.3671 5.854 15.3377 4.312 13.6124C2.77067 11.8877 2 10.0671 2 8.15039C2 6.58372 2.525 5.27539 3.575 4.22539C4.625 3.17539 5.93333 2.65039 7.5 2.65039C8.38333 2.65039 9.21667 2.83772 10 3.21239C10.7833 3.58772 11.45 4.10039 12 4.75039C12.55 4.10039 13.2167 3.58772 14 3.21239C14.7833 2.83772 15.6167 2.65039 16.5 2.65039C18.0667 2.65039 19.375 3.17539 20.425 4.22539C21.475 5.27539 22 6.58372 22 8.15039C22 10.0671 21.2293 11.8877 19.688 13.6124C18.146 15.3377 16.0667 17.3671 13.45 19.7004L12 21.0004Z"
      />
    </svg>
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M14.645 8.35942L12 2L9.35497 8.35942L2.48944 8.90983L7.72025 13.3906L6.12215 20.0902L12 16.5L17.8779 20.0902L16.2798 13.3906L21.5106 8.90983L14.645 8.35942Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
</div>
`;
